objects/cmcMule__secretManager__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>cmcMule__Mule_Client_Id__c</fullName>
        <label>Mule_Client_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmcMule__Mule_Client_Secret__c</fullName>
        <label>Mule Client Secret</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmcMule__Named_Credentials_Label__c</fullName>
        <label>Named Credentials Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmcMule__Project_Id__c</fullName>
        <label>Project Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmcMule__Secret_Id__c</fullName>
        <description>Secret Id of secret manager</description>
        <label>Secret_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmcMule__Secrets__c</fullName>
        <label>Secrets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>secretManager</label>
</CustomObject>